--- a/index.html
+++ b/index.html
@@ -7,20 +7,42 @@
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap');
 
+  *, *::before, *::after {
+    box-sizing: border-box;
+  }
+
   body {
     font-family: 'Orbitron', sans-serif;
     background: #000;
+    margin: 0;
+    padding: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    margin: 0;
+    overflow: hidden;
+    position: relative;
+  }
+
+  /* Background particles */
+  body::before {
+    content: '';
+    position: absolute;
+    top:0; left:0; width:100%; height:100%;
+    background: radial-gradient(circle, #00ff0040 1px, transparent 1px);
+    background-size: 20px 20px;
+    animation: moveBg 20s linear infinite;
+    z-index: -2;
+  }
+  @keyframes moveBg {
+    0% {background-position: 0 0;}
+    100% {background-position: 200px 200px;}
   }
 
   /* Animated neon border around form */
   .form-container {
     background: #000;
-    padding: 40px 30px;
+    padding: 30px 20px;
     border-radius: 12px;
     position: relative;
     width: 100%;
@@ -58,25 +80,20 @@
   h1 {
     position: relative;
     text-align: center;
-    font-size: 28px;
+    font-size: 22px;
     color: transparent;
     -webkit-text-stroke: 1px #00ff00;
     text-transform: uppercase;
-    margin-bottom: 30px;
+    margin-bottom: 25px;
     letter-spacing: 2px;
     z-index: 1;
     animation: neonPulse 1.8s ease-in-out infinite alternate;
+    word-wrap: break-word;
   }
   @keyframes neonPulse {
-    0% {
-      text-shadow: 0 0 5px #00ff00, 0 0 10px #00ff00, 0 0 20px #00ff00;
-    }
-    50% {
-      text-shadow: 0 0 10px #00ff00, 0 0 20px #00ff00, 0 0 30px #00ff88;
-    }
-    100% {
-      text-shadow: 0 0 5px #00ff00, 0 0 10px #00ff00, 0 0 20px #00ff00;
-    }
+    0% { text-shadow: 0 0 5px #00ff00, 0 0 10px #00ff00, 0 0 20px #00ff00; }
+    50% { text-shadow: 0 0 10px #00ff00, 0 0 20px #00ff00, 0 0 30px #00ff88; }
+    100% { text-shadow: 0 0 5px #00ff00, 0 0 10px #00ff00, 0 0 20px #00ff00; }
   }
 
   label {
@@ -100,9 +117,10 @@
     color: #00ff00;
     font-size: 15px;
     box-shadow: 0 0 10px #00ff0077 inset;
-    transition: all 0.3s ease;
+    transition: all 0.3s ease, box-shadow 1s ease-in-out;
     position: relative;
     z-index: 1;
+    animation: fieldPulse 2s ease-in-out infinite alternate;
   }
 
   input::placeholder {
@@ -112,7 +130,12 @@
   input:focus, select:focus {
     outline: none;
     border-color: #00ff00;
-    box-shadow: 0 0 15px #00ff00aa inset;
+    box-shadow: 0 0 20px #00ff00aa inset;
+  }
+
+  @keyframes fieldPulse {
+    0% { box-shadow: 0 0 5px #00ff0077 inset; }
+    100% { box-shadow: 0 0 15px #00ff00aa inset; }
   }
 
   button {
@@ -126,15 +149,25 @@
     font-weight: bold;
     text-transform: uppercase;
     cursor: pointer;
-    transition: all 0.3s ease;
+    transition: all 0.3s ease, box-shadow 1s ease-in-out;
     box-shadow: 0 0 10px #00ff0077;
     position: relative;
     z-index: 1;
+    animation: fieldPulse 2s ease-in-out infinite alternate;
   }
 
   button:hover {
     background: #00ff0022;
     box-shadow: 0 0 20px #00ff00, 0 0 40px #00ff0044 inset;
+  }
+
+  @media (max-width: 480px) {
+    .form-container {
+      padding: 20px 15px;
+    }
+    h1 {
+      font-size: 20px;
+    }
   }
 </style>
 </head>
@@ -213,7 +246,6 @@ form.addEventListener('submit', async function(e) {
       headers: { 'Accept': 'application/json' }
     });
     if (response.ok) {
-      // Redirect after successful submission
       window.location.href = "https://institute4wealth.com";
     } else {
       alert('Oops! Something went wrong. Please try again.');
