--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                     <button class="simple-button" onclick="openModal('quote-modal')">Get Quote</button>
                     <button class="simple-button" onclick="openModal('application-modal')">Join Our Team</button>
                     <a href="https://calendly.com/queenofwealth/30min?month=2025-09" target="_blank" rel="noopener noreferrer" class="social-button">Free Consultation</a>
-                    <a href="https://www.youtube.com/@katherine.williams3292" target="_blank" rel="noopener noreferrer" class="social-button">YOUTUBE I4W</a>
+                    <a href="https://www.youtube.com/@queenofhealthandwealth" target="_blank" rel="noopener noreferrer" class="social-button">YOUTUBE I4W</a>
                     <a href="https://www.facebook.com/katherine.financialchampion/" target="_blank" rel="noopener noreferrer" class="social-button">FACEBOOK QHW</a>
                 </div>
             </div>
@@ -653,3 +653,4 @@
     </script>
 </body>
 </html>
+
