--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                     <button class="simple-button" onclick="openModal('application-modal')">Join Our Team</button>
                     <a href="https://calendly.com/queenofwealth/30min?month=2025-09" target="_blank" rel="noopener noreferrer" class="social-button">Free Consultation</a>
                     <a href="https://www.youtube.com/@queenofhealthandwealth" target="_blank" rel="noopener noreferrer" class="social-button">YOUTUBE I4W</a>
-                    <a href="https://www.facebook.com/katherine.financialchampion/" target="_blank" rel="noopener noreferrer" class="social-button">FACEBOOK QHW</a>
+                    <a href="https://www.facebook.com/profile.php?id=61580010932668&sk=grid" target="_blank" rel="noopener noreferrer" class="social-button">FACEBOOK QHW</a>
                 </div>
             </div>
         </section>
@@ -653,4 +653,5 @@
     </script>
 </body>
 </html>
+
 
