--- a/index.html
+++ b/index.html
@@ -362,8 +362,8 @@
                     <button class="simple-button" onclick="openModal('quote-modal')">Get Quote</button>
                     <button class="simple-button" onclick="openModal('application-modal')">Join Our Team</button>
                     <a href="https://calendly.com/queenofwealth/30min?month=2025-09" target="_blank" rel="noopener noreferrer" class="social-button">Free Consultation</a>
-                    <a href="https://www.youtube.com/@katherine.williams3292" target="_blank" rel="noopener noreferrer" class="social-button">YOUTUBE I4W</a>
-                    <a href="https://www.facebook.com/katherine.financialchampion/" target="_blank" rel="noopener noreferrer" class="social-button">FACEBOOK QHW</a>
+                    <a href="https://www.youtube.com/@queenofhealthandwealth" target="_blank" rel="noopener noreferrer" class="social-button">YOUTUBE I4W</a>
+                    <a href="https://www.facebook.com/profile.php?id=61580010932668&sk=reels_tab" target="_blank" rel="noopener noreferrer" class="social-button">FACEBOOK QHW</a>
                     <a href="https://www.tiktok.com/@queen.of.health.wealth?_t=ZP-8zz7fQkdQIp&_r=1" target="_blank" rel="noopener noreferrer" class="social-button">TIKTOK QHW</a>
                 </div>
             </div>
