--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
         <section id="attention" class="scroll-section bg-black flex flex-col justify-center items-center text-center p-0">
             <div class="bg-black px-8 py-8 sm:px-16 sm:py-16 rounded-xl shadow-lg max-w-sm sm:max-w-xl flex flex-col items-center justify-center">
                 <h1 class="text-3xl sm:text-4xl md:text-5xl lg:text-6xl uppercase font-bold text-red-500 mb-2 js-animate-title">INSTITUTE4WEALTH</h1>
-                <p class="text-lg sm:text-xl md:text-2xl leading-relaxed max-w-xs sm:max-w-sm mx-auto text-white">Your one-stop destination for financial empowerment, wealth building, and the powerful preservation of your legacy.</p>
+                <p class="text-lg sm:text-xl md:text-2xl leading-relaxed max-w-xs sm:max-w-sm mx-auto text-white">Your path to financial power. This is your one-stop destination for building wealth, securing your future, and protecting the legacy you want to leave behind.</p>
             </div>
         </section>
 
@@ -319,7 +319,7 @@
                     
                     <!-- Exclusivity Statement -->
                     <p class="text-xl leading-relaxed text-center text-white mt-8 max-w-lg mx-auto">
-                        This is an invitation, not an open offer. The <b>Indexed Universal Life</b> is a masterpiece crafted for those who define their own market, for the visionaries who demand security and legacy. Not every plan is designed for greatness. This one is.
+                        The path to a powerful legacy. This is an invitation, not an open offer. The Indexed Universal Life is a masterpiece designed for those who command their own future, for the visionaries who demand both security and a lasting legacy. Not every plan is designed for greatness. This one is.
                     </p>
                 </div>
              </div>
@@ -340,7 +340,7 @@
                         <p class="text-xl text-white">Retirement Planning</p>
                     </div>
                     <div class="p-4 bg-[#1a1a1a] rounded-lg">
-                        <p class="text-xl text-white">Wealth Preservation</p>
+                        <p class="text-xl text-white">Building a lasting financial foundation.</p>
                     </div>
                     <div class="p-4 bg-[#1a1a1a] rounded-lg">
                         <p class="text-xl text-white">Estate Planning Integration</p>
@@ -590,3 +590,4 @@
     </script>
 </body>
 </html>
+
