--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                     <div class="flex flex-col gap-4 mt-8 w-full max-w-lg mx-auto">
                         <div class="bg-[#1a1a1a] p-4 rounded-lg text-left">
                             <h3 class="text-2xl uppercase font-bold text-green-500 mb-1">The Private Vault</h3>
-                            <p class="text-lg italic text-white">Your wealth, curated and preserved, away from the public gaze.</p>
+                            <p class="text-lg italic text-white">Your wealth,  built, curated and preserved, away from the public gaze.</p>
                         </div>
                         <div class="bg-[#1a1a1a] p-4 rounded-lg text-left">
                             <h3 class="text-2xl uppercase font-bold text-green-500 mb-1">Couture Design</h3>
@@ -590,4 +590,5 @@
     </script>
 </body>
 </html>
+
 
