--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                         <p class="text-xl text-white">Retirement Planning</p>
                     </div>
                     <div class="p-4 bg-[#1a1a1a] rounded-lg">
-                        <p class="text-xl text-white">Building a lasting financial foundation.</p>
+                        <p class="text-xl text-white">Building Lasting Financial Foundations </p>
                     </div>
                     <div class="p-4 bg-[#1a1a1a] rounded-lg">
                         <p class="text-xl text-white">Estate Planning Integration</p>
@@ -598,3 +598,4 @@
     </script>
 </body>
 </html>
+
