--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
         <section id="attention" class="scroll-section bg-black flex flex-col justify-center items-center text-center p-0">
             <div class="bg-black px-8 py-8 sm:px-16 sm:py-16 rounded-xl shadow-lg max-w-sm sm:max-w-xl flex flex-col items-center justify-center">
                 <h1 class="text-3xl sm:text-4xl md:text-5xl lg:text-6xl uppercase font-bold text-golden-metallic mb-2 js-animate-title">INSTITUTE4WEALTH</h1>
-                <p class="text-lg sm:text-xl md:text-2xl leading-relaxed max-w-xs sm:max-w-sm mx-auto text-white">Your path to **tax-free** financial power. This is your one-stop destination for building wealth, securing your future, and protecting the legacy you want to leave behind.</p>
+                <p class="text-lg sm:text-xl md:text-2xl leading-relaxed max-w-xs sm:max-w-sm mx-auto text-white">Your path to tax-free financial power. This is your one-stop destination for building wealth, securing your future, and protecting the legacy you want to leave behind.</p>
             </div>
         </section>
 
@@ -275,7 +275,7 @@
                 <div class="mt-4 w-full text-center">
                     <h2 class="text-5xl uppercase font-bold text-golden-metallic mb-2 js-animate-title">Your Tax-Free Legacy, Elevated</h2>
                     <p class="text-xl leading-relaxed text-center text-white mb-4">
-                        Crafting a masterpiece of financial security and timeless elegance through **Indexed Universal Life (IUL)**.
+                        Crafting a masterpiece of financial security and timeless elegance through Indexed Universal Life (IUL).
                     </p>
 
                     <p class="text-xl leading-relaxed italic text-center text-white mb-4 max-w-lg mx-auto">
@@ -285,7 +285,7 @@
                     <div class="flex flex-col gap-4 mt-8 w-full max-w-lg mx-auto">
                         <div class="bg-[#1a1a1a] p-4 rounded-lg text-left">
                             <h3 class="text-2xl uppercase font-bold text-golden-metallic mb-1">The Tax-Free Private Vault</h3>
-                            <p class="text-lg italic text-white">Your wealth built, curated and preserved, away from the public gaze with the power of **IUL**.</p>
+                            <p class="text-lg italic text-white">Your wealth built, curated and preserved, away from the public gaze with the power of IUL.</p>
                         </div>
                         <div class="bg-[#1a1a1a] p-4 rounded-lg text-left">
                             <h3 class="text-2xl uppercase font-bold text-golden-metallic mb-1">Couture Design</h3>
@@ -298,7 +298,7 @@
                     </div>
 
                     <p class="text-xl leading-relaxed text-center text-white mt-8 max-w-lg mx-auto">
-                        The path to a powerful legacy. This is an invitation, not an open offer. The **Indexed Universal Life** is a masterpiece designed for those who command their own future, for the visionaries who demand both security and a lasting legacy. Not every plan is designed for greatness. This one is.
+                        The path to a powerful legacy. This is an invitation, not an open offer. The Indexed Universal Life is a masterpiece designed for those who command their own future, for the visionaries who demand both security and a lasting legacy. Not every plan is designed for greatness. This one is.
                     </p>
                 </div>
              </div>
@@ -308,11 +308,11 @@
             <div class="max-w-md mx-auto flex flex-col items-center p-2">
                 <h2 class="text-5xl uppercase font-bold text-golden-metallic mb-2 js-animate-title">Our Financial Services</h2>
                 <p class="text-xl leading-relaxed text-center text-white mt-4">
-                    The Institute 4 Wealth, led by Katie, specializes in building **tax-free wealth** through sophisticated financial strategies. We offer personalized solutions nationwide, focusing on:
+                    The Institute 4 Wealth, led by Katie, specializes in building tax-free wealth through sophisticated financial strategies. We offer personalized solutions nationwide, focusing on:
                 </p>
                 <div class="flex flex-col justify-center items-stretch gap-2 mt-4 w-full">
                     <div class="p-4 bg-[#1a1a1a] rounded-lg">
-                        <p class="text-xl text-white">**Indexed Universal Life (IUL)** Strategies</p>
+                        <p class="text-xl text-white">Indexed Universal Life (IUL) Strategies</p>
                     </div>
                     <div class="p-4 bg-[#1a1a1a] rounded-lg">
                         <p class="text-xl text-white">Retirement Planning</p>
@@ -329,14 +329,25 @@
 
         <section id="call-to-action" class="scroll-section bg-black">
             <div class="max-w-md mx-auto text-center flex flex-col items-center p-2">
-                <h2 class="text-5xl uppercase font-bold text-golden-metallic mb-2 js-animate-title">Get a Quote or Join Our Team</h2>
+                <h2 class="text-5xl uppercase font-bold text-golden-metallic mb-2 js-animate-title">Get Started Now</h2>
                 <p class="text-xl leading-relaxed text-center text-white mt-4">
-                    Take the next step towards securing your financial future or starting a career as a **Financial Agent**.
+                    Choose your path to securing your financial future or starting a career as a Financial Agent.
                 </p>
                 <div class="flex flex-col justify-center items-center gap-2 w-full px-2 mb-2 mt-8">
-                    <button class="simple-button" onclick="openModal('quote-modal')">Get Life Insurance Quote</button>
-                    <button class="simple-button" onclick="openModal('application-modal')">Financial Agent Application</button>
-                    <a href="https://calendly.com/queenofwealth/30min?month=2025-09" target="_blank" rel="noopener noreferrer" class="social-button">Free Consultation</a>
+                    <button class="simple-button" onclick="openModal('quote-modal')">Get a Quick Quote</button>
+                    <a href="https://calendly.com/queenofwealth/30min?month=2025-09" target="_blank" rel="noopener noreferrer" class="social-button">Book a Strategy Session</a>
+                    <button class="simple-button" onclick="openModal('application-modal')">Join Our Team</button>
+                </div>
+            </div>
+        </section>
+        
+        <section id="social-media" class="scroll-section bg-black">
+            <div class="max-w-md mx-auto text-center flex flex-col items-center p-2">
+                <h2 class="text-5xl uppercase font-bold text-golden-metallic mb-2 js-animate-title">Connect With Katie (The Queen)</h2>
+                <p class="text-xl leading-relaxed text-center text-white mt-4">
+                    Follow Katie's journey for daily inspiration, financial tips, and behind-the-scenes content!
+                </p>
+                <div class="flex flex-col justify-center items-center gap-2 w-full px-2 mb-2 mt-8">
                     <a href="https://www.youtube.com/@queenofhealthandwealth" target="_blank" rel="noopener noreferrer" class="social-button">YOUTUBE I4W</a>
                     <a href="https://www.facebook.com/profile.php?id=61580010932668&sk=reels_tab" target="_blank" rel="noopener noreferrer" class="social-button">FACEBOOK QHW</a>
                     <a href="https://www.tiktok.com/@queen.of.health.wealth?_t=ZP-8zz7fQkdQIp&_r=1" target="_blank" rel="noopener noreferrer" class="social-button">TIKTOK QHW</a>
@@ -350,7 +361,6 @@
                    playsinline 
                    autoplay 
                    muted 
-                   loop 
                    loading="lazy"
                    poster="placeholder-video-image.jpg"
             ></video>
