--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
         <section id="attention" class="scroll-section bg-black flex flex-col justify-center items-center text-center p-0">
             
             <video class="video-background" 
-                   src="katie-video.mp4" 
+                   src="katie-video1.mp4" 
                    playsinline 
                    autoplay 
                    muted 
@@ -612,6 +612,7 @@
     </script>
 </body>
 </html>
+
 
 
 
